--- a/benchmark-runner/conf/web_content/queries.yml
+++ b/benchmark-runner/conf/web_content/queries.yml
@@ -25,15 +25,15 @@ queries:
   - "match $x isa person; $y (employee: $x) isa employment; get $x, $y;"
   # match entities with attribute
   - "match $x has url; get $x;"
-  # match nested relationship, webpage to web-page-hierarchy
-  - "match $x isa webpage; ($x) isa web-page-hierarchy; get;"
+  # match nested relationship, web-page to web-page-hierarchy
+  - "match $x isa web-page; ($x) isa web-page-hierarchy; get;"
 
 
   # -- Linear Multi-hop queries with specific labeled targets --
   # 4 relationship hops, including one nested relationship
   - "match $p isa person;
       (member: $p, group: $employer) isa employment;
-      $employer isa organization;
+      $employer isa organisation;
       (author: $p, authored-content: $ac) isa authorship;
       $ac isa publication;
       (content: $ac, parent-site: $ps) isa web-page;
@@ -43,7 +43,7 @@ queries:
   # same 4 hops with attributes
   - "match $p isa person, has name $person-name;
       (member: $p, group: $employer) isa employment, has job-title $title;
-      $employer isa organization, has name $orgname;
+      $employer isa organisation, has name $orgname;
       (author: $p, authored-content: $ac) isa authorship;
       $ac isa publication, has title $t;
       (content: $ac, parent-site: $ps) isa web-page, has url $u;
