--- a/benchmark-runner/pom.xml
+++ b/benchmark-runner/pom.xml
@@ -4,6 +4,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <repositories>
+    <repository>
+        <id>mavengraknai</id>
+        <url>http://maven.grakn.ai/nexus/content/repositories/bazel-test-snapshot/</url>
+    </repository>
+    </repositories>
+
     <build>
         <plugins>
             <plugin>
@@ -42,11 +50,6 @@
             <artifactId>client-java</artifactId>
             <version>${grakn.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.6.2</version>
-        </dependency>
 
         <!-- Ignite -->
         <dependency>
@@ -56,20 +59,9 @@
         </dependency>
         <dependency>
             <groupId>org.apache.ignite</groupId>
-            <artifactId>ignite-spring</artifactId>
-            <version>${ignite.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.ignite</groupId>
             <artifactId>ignite-indexing</artifactId>
             <version>${ignite.version}</version>
         </dependency>
-        <dependency>
-          <groupId>com.h2database</groupId>
-          <artifactId>h2</artifactId>
-          <version>${h2.version}</version>
-        </dependency>
-
 
         <!-- mockito -->
         <dependency>
@@ -79,22 +71,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- zipkin server -->
-        <!-- https://mvnrepository.com/artifact/io.zipkin.java/zipkin -->
-        <!--<dependency>-->
-            <!--<groupId>io.zipkin.java</groupId>-->
-            <!--<artifactId>zipkin</artifactId>-->
-            <!--<version>2.10.1</version>-->
-        <!--</dependency>-->
-
-        <dependency>
-            <groupId>io.zipkin.brave</groupId>
-            <artifactId>brave-instrumentation-grpc</artifactId>
-            <version>${brave-grpc.version}</version>
-        </dependency>
-
-
-        <!-- YAML parsing -->
+        <!--&lt;!&ndash; YAML parsing &ndash;&gt;-->
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
@@ -107,27 +84,39 @@
             <artifactId>elasticsearch-rest-client</artifactId>
             <version>6.4.0</version>
         </dependency>
+
+        <!-- Apache CLI commons for command line parsing -->
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.3.1</version>
         </dependency>
-    </dependencies>
-    <dependencyManagement>
-    <dependencies>
 
-        <!--Brave-->
+        <!-- Apache commons math 3 for Zipf distribution -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
+        <!-- Brave tracing -->
         <dependency>
             <groupId>io.zipkin.brave</groupId>
-            <artifactId>brave-bom</artifactId>
-            <version>${brave.version}</version>
-            <type>pom</type>
-            <scope>import</scope>
+            <artifactId>brave</artifactId>
         </dependency>
+
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+
+            <!--Brave-->
+            <dependency>
+                <groupId>io.zipkin.brave</groupId>
+                <artifactId>brave-bom</artifactId>
+                <version>${brave.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
     </dependencyManagement>
-
-
-        
-
 </project>
