--- a/dependencies/maven/artifacts/com/fasterxml/jackson/core/BUILD
+++ b/dependencies/maven/artifacts/com/fasterxml/jackson/core/BUILD
@@ -16,7 +16,7 @@ java_library(
         "//external:jar/com/fasterxml/jackson/core/jackson-core"
     ],
     visibility = [
-        "//dependencies/maven/artifacts:__subpackages__"
+        "//visibility:public"
     ]
 )
 
