working bazel build + run, missing logback integration

--- a/dependencies/maven/artifacts/io/zipkin/brave/BUILD
+++ b/dependencies/maven/artifacts/io/zipkin/brave/BUILD
@@ -8,7 +8,7 @@ java_library(
         "//dependencies/maven/artifacts/io/zipkin/zipkin2:zipkin"
     ],
     visibility = [
-        "//dependencies/maven/artifacts:__subpackages__"
+        "//visibility:public"
     ]
 )
 
