--- a/dependencies/maven/dependencies.yaml
+++ b/dependencies/maven/dependencies.yaml
@@ -32,6 +32,8 @@ options:
 
 
 dependencies:
+
+  # -- Grakn --
   ai.grakn:
     client-java:
       version: "1.5.0-SNAPSHOT"
@@ -40,6 +42,7 @@ dependencies:
       version: "1.5.0-SNAPSHOT"
       lang: java
 
+  # -- YAML parsing --
   com.fasterxml.jackson.core:
     jackson-databind:
       version: "2.9.2"
@@ -51,4 +54,65 @@ dependencies:
   com.fasterxml.jackson.dataformat:
     jackson-dataformat-yaml:
       version: "2.9.2"
+      lang: java
+
+  # -- Brave --
+  io.zipkin.brave:
+    brave:
+      version: "5.1.2"
+      lang: java
+
+  # -- Logging --
+  org.slf4j:
+    slf4j-api:
+      version: "1.7.25"
+      lang: java
+
+  # -- Ignite --
+  org.apache.ignite:
+    ignite-core:
+      version: "2.6.0"
+      lang: java
+    ignite-indexing:
+      version: "2.6.0"
+      lang: java
+
+  # -- Elasticsearch --
+  org.elasticsearch.client:
+    elasticsearch-rest-client:
+      version: "6.4.0"
+      lang: java
+
+  # required HTTP libs for ES client
+  org.apache.httpcomponents:
+    httpcore:
+      version: "4.4.10"
+      lang: java
+    httpclient:
+      version: "4.5.6"
+      lang: java
+
+  # -- CLI args parsing (apache) --
+  commons-cli:
+    commons-cli:
+      version: "1.3.1"
+      lang: java
+
+  # -- Apache math3 --
+  org.apache.commons:
+    commons-math3:
+      version: "3.6.1"
+      lang: java
+
+
+  # -- Testing --
+  # NOTE: junit version 4 is from 2014!
+  junit:
+    junit:
+      version: "4.12"
+      lang: java
+
+  org.mockito:
+    mockito-core:
+      version: "2.6.4"
       lang: java
