--- a/dependencies/maven/dependencies.yaml
+++ b/dependencies/maven/dependencies.yaml
@@ -121,3 +121,11 @@ dependencies:
     mockito-core:
       version: "2.6.4"
       lang: java
+
+
+
+  # ----- For lib/ -----
+  io.grpc:
+   grpc-core:
+      version: "1.15.0"
+      lang: java
