--- a/lib/clientinstrumentation/BUILD
+++ b/lib/clientinstrumentation/BUILD
@@ -17,12 +17,17 @@
 #
 
 java_library(
-    name = "interceptor",
+    name = "clientinstrumentation",
     srcs = glob(["*.java"]),
     deps = [
         "//lib/util:util",
+        "//dependencies/maven/artifacts/ai/grakn:rpc",
+        "//dependencies/maven/artifacts/com/google/protobuf:protobuf-java",
         "//dependencies/maven/artifacts/io/grpc:grpc-core",
         "//dependencies/maven/artifacts/io/zipkin/brave:brave",
+        "//dependencies/maven/artifacts/io/zipkin/zipkin2:zipkin",
+        "//dependencies/maven/artifacts/io/zipkin/reporter2:zipkin-sender-urlconnection",
+        "//dependencies/maven/artifacts/io/zipkin/reporter2:zipkin-reporter",
         "//dependencies/maven/artifacts/org/slf4j:slf4j-api"
     ],
     visibility = ["//visibility:public"]
