--- a/dependencies/maven/dependencies.yaml
+++ b/dependencies/maven/dependencies.yaml
@@ -169,16 +169,29 @@ dependencies:
 
 
   # ND4J -- numpy-ish equivalent for handling data arrays
+  # requries native binaries
+  # included linux and macosx here
+  # correct jar is chosen in BUILD file
   org.nd4j:
-#    nd4j-api:
-#      version: "1.0.0-beta3"
-#      lang: java
     nd4j-native:
-      version: "0.9.1"
+      version: "1.0.0-beta3"
       lang: java
-#    nd4j-backend-impls:
-#      version: "1.0.0-beta3"
-#      lang: java
-#    nd4j-backend-impls:
-#      version: "0.9.1"
-#      lang: java
+      exclude:
+      - "org.nd4j:nd4j-backend-impls:jar.asc:macosx-x86_64"
+      - "org.nd4j:nd4j-backend-impls:jar.asc:linux-x86_64"
+    nd4j-api:
+      version: "1.0.0-beta3"
+      lang: java
+    nd4j-native-api:
+      version: "1.0.0-beta3"
+      lang: java
+    nd4j-native:jar:macosx-x86_64:
+      version: "1.0.0-beta3"
+      lang: java
+      exclude:
+      - "org.nd4j:nd4j-backend-impls:jar.asc:macosx-x86_64"
+    nd4j-native:jar:linux-x86_64:
+      version: "1.0.0-beta3"
+      lang: java
+      exclude:
+      - "org.nd4j:nd4j-backend-impls:jar.asc:linux-x86_64.jar"
