Implement and unit test DegreeDistribution

--- a/dependencies/maven/artifacts/org/nd4j/BUILD
+++ b/dependencies/maven/artifacts/org/nd4j/BUILD
@@ -51,7 +51,7 @@ java_library(
         ":nd4j-context"
     ],
     visibility = [
-        "//dependencies/maven/artifacts:__subpackages__"
+        "//visibility:public"
     ]
 )
 
