--- a/metric/BUILD
+++ b/metric/BUILD
@@ -106,6 +106,17 @@ java_test(
      ]
 )
 
+
+java_test(
+     name = "degree-distribution-it",
+     test_class = "grakn.benchmark.metric.test.DegreeDistributionIT",
+     srcs = ["test/DegreeDistributionIT.java"],
+     deps = [
+         "//metric:metric",
+         "//dependencies/maven/artifacts/junit:junit"
+     ]
+ )
+
 java_test(
      name = "degree-distribution-test",
      test_class = "grakn.benchmark.metric.test.DegreeDistributionTest",
@@ -114,11 +125,6 @@ java_test(
          "//metric:metric",
          "//dependencies/maven/artifacts/junit:junit",
          "//dependencies/maven/artifacts/org/mockito:mockito-core",
-
-          "//dependencies/maven/artifacts/org/nd4j:nd4j-native",
-          "//dependencies/maven/artifacts/org/nd4j:nd4j-api",
-          "//dependencies/maven/artifacts/org/nd4j:nd4j-native-api",
-          ":nd4j-native-platform-independent"
      ]
  )
 
@@ -131,10 +137,5 @@ java_test(
         "//dependencies/maven/artifacts/junit:junit",
         "//dependencies/maven/artifacts/org/mockito:mockito-core",
         "//dependencies/maven/artifacts/org/apache/commons:commons-math3",
-
-#         "//dependencies/maven/artifacts/org/nd4j:nd4j-native",
-#         "//dependencies/maven/artifacts/org/nd4j:nd4j-api",
-#         "//dependencies/maven/artifacts/org/nd4j:nd4j-native-api",
-#         ":nd4j-native-platform-independent"
     ]
 )
