Add guava for accessing Graql Admin relationPlayer, relationship label from query analysis, extended extracting role players from query to also return role labels

--- a/runner/BUILD
+++ b/runner/BUILD
@@ -52,6 +52,8 @@ java_library(
 
         "//dependencies/maven/artifacts/commons-cli",
         "//dependencies/maven/artifacts/org/apache/commons:commons-math3",
+
+        "//dependencies/maven/artifacts/com/google/guava:guava"
     ],
     runtime_deps = [
         "//dependencies/maven/artifacts/io/grpc:grpc-netty-shaded"
