--- a/runner/conf/social_network/queries.yml
+++ b/runner/conf/social_network/queries.yml
@@ -1,8 +1,4 @@
 queries:
-  # expect to see this scale with entities (fixed increments)
-  - match $x isa person; get;
-
-  #
-  - match $x has name $n; $n isa name; get;
-
-  - match $r (friend: $f); $f isa person; get;
+  - "match $x isa person; get;"
+  - "match $x has name $n; $n isa name; get;"
+  - "match $r (friend: $f); $f isa person; get;"
