--- a/profiler/src/generator/test/provider/BUILD
+++ b/profiler/src/generator/test/provider/BUILD
@@ -1,10 +1,11 @@
 
 java_test(
     name = "central-stream-provider-test",
-    test_class = "grakn.benchmark.runner.provider.CentralConceptProviderTest",
+    test_class = "grakn.benchmark.profiler.generator.provider.CentralConceptProviderTest",
     srcs = ["CentralConceptProviderTest.java"],
     deps = [
-        "//profiler:benchmark-profiler",
+        "//profiler/src/generator:data-generator",
+        "//dependencies/maven/artifacts/grakn/core:grakn-graql",
         "//dependencies/maven/artifacts/org/mockito:mockito-core",
         "//dependencies/maven/artifacts/org/hamcrest:hamcrest-all"
     ]
