--- a/profiler/test-end-to-end/BUILD
+++ b/profiler/test-end-to-end/BUILD
@@ -1,7 +1,7 @@
 java_test(
     name = "test-end-to-end",
-    test_class = "grakn.benchmark.runner.SchemaManagerE2E",
-    srcs = ["SchemaManagerE2E.java"],
+    test_class = "grakn.benchmark.runner.GraknBenchmarkE2E",
+    srcs = ["GraknBenchmarkE2E.java"],
     deps = [
         "//profiler:benchmark-profiler",
         "//dependencies/maven/artifacts/grakn/core:client",
