add tests for NotInRelationshipConceptIdProvider, change one return signature in storage for consistency

--- a/profiler/src/generator/test/provider/BUILD
+++ b/profiler/src/generator/test/provider/BUILD
@@ -25,5 +25,8 @@ java_test(
      test_class = "grakn.benchmark.profiler.generator.provider.NotInRelationshipConceptIdProviderTest",
      srcs = ["NotInRelationshipConceptIdProviderTest.java"],
      deps = [
+        "//profiler/src/generator:data-generator",
+        "//dependencies/maven/artifacts/grakn/core:grakn-graql",
+        "//dependencies/maven/artifacts/org/mockito:mockito-core",
      ]
  )
