--- a/profiler/src/generator/test/query/BUILD
+++ b/profiler/src/generator/test/query/BUILD
@@ -2,7 +2,11 @@ java_test(
     name = "attribute-generator-test",
     test_class = "grakn.benchmark.profiler.generator.query.AttributeGeneratorTest",
     srcs = ["AttributeGeneratorTest.java"],
-    deps = []
+    deps = [
+        "//profiler/src/generator:data-generator",
+        "//dependencies/maven/artifacts/grakn/core:grakn-graql",
+        "//dependencies/maven/artifacts/org/mockito:mockito-core",
+    ]
 )
 
 java_test(
