--- a/profiler/src/generator/test/provider/BUILD
+++ b/profiler/src/generator/test/provider/BUILD
@@ -1,6 +1,6 @@
 java_test(
     name = "central-stream-provider-test",
-    test_class = "grakn.benchmark.profiler.generator.provider.CentralConceptProviderTest",
+    test_class = "grakn.benchmark.profiler.generator.provider.concept.CentralConceptProviderTest",
     srcs = ["CentralConceptProviderTest.java"],
     deps = [
         "//profiler/src/generator:data-generator",
@@ -11,7 +11,7 @@ java_test(
 
 java_test(
     name = "conceptid-storage-provider-test",
-    test_class = "grakn.benchmark.profiler.generator.provider.ConceptIdStorageProviderTest",
+    test_class = "grakn.benchmark.profiler.generator.provider.concept.ConceptIdStorageProviderTest",
     srcs = ["ConceptIdStorageProviderTest.java"],
     deps = [
         "//profiler/src/generator:data-generator",
@@ -22,7 +22,7 @@ java_test(
 
 java_test(
      name = "not-in-relationship-conceptid-storage-provider-test",
-     test_class = "grakn.benchmark.profiler.generator.provider.NotInRelationshipConceptIdProviderTest",
+     test_class = "grakn.benchmark.profiler.generator.provider.concept.NotInRelationshipConceptIdProviderTest",
      srcs = ["NotInRelationshipConceptIdProviderTest.java"],
      deps = [
         "//profiler/src/generator:data-generator",
