--- a/profiler/src/test/BUILD
+++ b/profiler/src/test/BUILD
@@ -1,6 +1,6 @@
 java_test(
     name = "benchmark-bootup-test-integration",
-    test_class = "grakn.benchmark.profiler.GraknBenchmarkTest",
+    test_class = "grakn.benchmark.profiler.test.GraknBenchmarkTest",
     srcs = ["BenchmarkBootupTestIntegration.java"],
     deps = [
         "//profiler:benchmark-profiler",
@@ -14,13 +14,18 @@ java_test(
 
 java_test(
     name = "benchmark-test-integration",
-    test_class = "grakn.benchmark.profiler.BenchmarkTestIntegration",
+    test_class = "grakn.benchmark.profiler.test.BenchmarkTestIntegration",
     srcs = ["BenchmarkTestIntegration.java"],
     deps = [
         "//profiler:benchmark-profiler",
         "//dependencies/maven/artifacts/grakn/core:client",
         "//dependencies/maven/artifacts/grakn/core:server",
-        "//dependencies/maven/artifacts/commons-cli"
+        "//dependencies/maven/artifacts/commons-cli",
+    ],
+    runtime_deps = [
+        "//dependencies/maven/artifacts/io/grpc:grpc-core",
+        "//dependencies/maven/artifacts/io/grpc:grpc-netty",
+        "//dependencies/maven/artifacts/io/grpc:grpc-stub",
     ],
     classpath_resources = ["//profiler/src/test/resources:logback-test"],
     data = [
