--- a/profiler/src/test/BUILD
+++ b/profiler/src/test/BUILD
@@ -1,6 +1,6 @@
 java_test(
     name = "benchmark-bootup-test-integration",
-    test_class = "grakn.benchmark.profiler.test.GraknBenchmarkTest",
+    test_class = "grakn.benchmark.profiler.test.GraknBootupTestIntegration",
     srcs = ["BenchmarkBootupTestIntegration.java"],
     deps = [
         "//profiler:benchmark-profiler",
@@ -21,9 +21,11 @@ java_test(
         "//dependencies/maven/artifacts/grakn/core:client",
         "//dependencies/maven/artifacts/grakn/core:server",
         "//dependencies/maven/artifacts/commons-cli",
+
         "//dependencies/maven/artifacts/io/grpc:grpc-core",
     ],
     runtime_deps = [
+#        "//dependencies/maven/artifacts/io/grpc:grpc-netty-shaded",
     ],
     classpath_resources = ["//profiler/src/test/resources:logback-test"],
     data = [
