migrate almost everything to git deps

--- a/profiler/BUILD
+++ b/profiler/BUILD
@@ -32,9 +32,13 @@ java_library(
     name = "benchmark-profiler",
     srcs = glob(["src/*.java", "src/util/*.java"]),
     deps = [
-        "//dependencies/maven/artifacts/grakn/core:client",
+#        "//dependencies/maven/artifacts/grakn/core:client",
+        "@graknlabs_client_java//:client-java",
+        "@graknlabs_grakn_core//api:api",
         "//dependencies/maven/artifacts/grakn/core:server",
-        "//dependencies/maven/artifacts/grakn/core:graql",
+#        "//dependencies/maven/artifacts/grakn/core:graql",
+        "@graknlabs_graql//java:graql",
+        "@graknlabs_grakn_core//concept:concept",
 
         "//dependencies/maven/artifacts/com/fasterxml/jackson/core:jackson-core",
         "//dependencies/maven/artifacts/com/fasterxml/jackson/core:jackson-databind",
