--- a/dependencies/maven/dependencies.yaml
+++ b/dependencies/maven/dependencies.yaml
@@ -34,25 +34,25 @@ options:
 dependencies:
   # -- Grakn --
   grakn.core:
-    client:
-      version: "1.5.0-94154e9579a5760fdaaf610ff586f5fba495b864-SNAPSHOT"
-      lang: java
-      exclude:
-        - "org.slf4j:slf4j-log4j12"
-    server:
-      version: "1.5.0-94154e9579a5760fdaaf610ff586f5fba495b864-SNAPSHOT"
-      lang: java
-      exclude:
-      - "org.slf4j:slf4j-log4j12"
-    common:
-      version: "1.5.0-94154e9579a5760fdaaf610ff586f5fba495b864-SNAPSHOT"
-      lang: java
-    protocol:
-      version: "1.5.0-94154e9579a5760fdaaf610ff586f5fba495b864-SNAPSHOT"
-      lang: java
-    graql:
-      version: "1.5.0-94154e9579a5760fdaaf610ff586f5fba495b864-SNAPSHOT"
-      lang: java
+#    client:
+#      version: "1.5.0-94154e9579a5760fdaaf610ff586f5fba495b864-SNAPSHOT"
+#      lang: java
+#      exclude:
+#        - "org.slf4j:slf4j-log4j12"
+#    server:
+#      version: "1.5.0-94154e9579a5760fdaaf610ff586f5fba495b864-SNAPSHOT"
+#      lang: java
+#      exclude:
+#      - "org.slf4j:slf4j-log4j12"
+#    common:
+#      version: "1.5.0-94154e9579a5760fdaaf610ff586f5fba495b864-SNAPSHOT"
+#      lang: java
+#    protocol:
+#      version: "1.5.0-94154e9579a5760fdaaf610ff586f5fba495b864-SNAPSHOT"
+#      lang: java
+#    graql:
+#      version: "1.5.0-94154e9579a5760fdaaf610ff586f5fba495b864-SNAPSHOT"
+#      lang: java
 
 
   # -- YAML parsing --
