--- a/profiler/src/generator/test/provider/BUILD
+++ b/profiler/src/generator/test/provider/BUILD
@@ -3,6 +3,7 @@ java_test(
     test_class = "grakn.benchmark.profiler.generator.provider.concept.CentralConceptProviderTest",
     srcs = ["CentralConceptProviderTest.java"],
     deps = [
+        "@graknlabs_grakn_core//concept:concept",
         "//profiler/src/generator:data-generator",
         "//dependencies/maven/artifacts/grakn/core:server",
         "//dependencies/maven/artifacts/org/mockito:mockito-core",
@@ -14,6 +15,7 @@ java_test(
     test_class = "grakn.benchmark.profiler.generator.provider.concept.ConceptIdStorageProviderTest",
     srcs = ["ConceptIdStorageProviderTest.java"],
     deps = [
+        "@graknlabs_grakn_core//concept:concept",
         "//profiler/src/generator:data-generator",
         "//dependencies/maven/artifacts/grakn/core:server",
         "//dependencies/maven/artifacts/org/mockito:mockito-core",
@@ -25,6 +27,7 @@ java_test(
      test_class = "grakn.benchmark.profiler.generator.provider.concept.NotInRelationshipConceptIdProviderTest",
      srcs = ["NotInRelationshipConceptIdProviderTest.java"],
      deps = [
+        "@graknlabs_grakn_core//concept:concept",
         "//profiler/src/generator:data-generator",
         "//dependencies/maven/artifacts/grakn/core:server",
         "//dependencies/maven/artifacts/org/mockito:mockito-core",
