--- a/profiler/src/generator/test/util/BUILD
+++ b/profiler/src/generator/test/util/BUILD
@@ -3,6 +3,8 @@ java_test(
     test_class = "grakn.benchmark.profiler.generator.util.InsertQueryAnalyserTest",
     srcs = ["InsertQueryAnalyserTest.java"],
     deps = [
+        "@graknlabs_graql//java:graql",
+        "@graknlabs_grakn_core//concept:concept",
         "//profiler/src/generator:data-generator",
         "//dependencies/maven/artifacts/org/mockito:mockito-core",
         "//dependencies/maven/artifacts/grakn/core:server",
