Final bazel updates to use git deps

--- a/profiler/BUILD
+++ b/profiler/BUILD
@@ -35,8 +35,14 @@ java_library(
         "@graknlabs_client_java//:client-java",
         "@graknlabs_grakn_core//api:api",
         "@graknlabs_grakn_core//server:server",
+        "@graknlabs_grakn_core//common:common",
         "@graknlabs_graql//java:graql",
         "@graknlabs_grakn_core//concept:concept",
+
+        "//lib:lib",
+
+        # TODO should this be via grakn-core's deps?
+        "//dependencies/maven/artifacts/io/grpc:grpc-core",
 
         "//dependencies/maven/artifacts/com/fasterxml/jackson/core:jackson-core",
         "//dependencies/maven/artifacts/com/fasterxml/jackson/core:jackson-databind",
