Move tests around, update circle config

--- a/profiler/test/BUILD
+++ b/profiler/test/BUILD
@@ -1,9 +1,12 @@
 java_test(
-    name = "benchmark-bootup-test-integration",
-    test_class = "grakn.benchmark.profiler.test.BenchmarkBootupTestIntegration",
-    srcs = ["BenchmarkBootupTestIntegration.java"],
+    name = "profiler-bootup-test-integration",
+    test_class = "grakn.benchmark.profiler.ProfilerBootupTestIntegration",
+    srcs = ["ProfilerBootupTestIntegration.java"],
     deps = [
         "//profiler:benchmark-profiler",
+        "@graknlabs_client_java//:client-java",
+        "@graknlabs_grakn_core//concept:concept",
+        "@graknlabs_graql//java:graql",
         "//dependencies/maven/artifacts/commons-cli",
     ],
     classpath_resources = ["//profiler/test/resources:logback-test"],
@@ -13,20 +16,16 @@ java_test(
 )
 
 java_test(
-    name = "benchmark-test-integration",
-    test_class = "grakn.benchmark.profiler.test.BenchmarkTestIntegration",
-    srcs = ["BenchmarkTestIntegration.java"],
+    name = "profiler-bootup-test",
+    test_class = "grakn.benchmark.profiler.ProfilerBootupTest",
+    srcs = ["ProfilerBootupTest.java"],
     deps = [
         "//profiler:benchmark-profiler",
-        "@graknlabs_client_java//:client-java",
-        "@graknlabs_grakn_core//concept:concept",
-        "@graknlabs_graql//java:graql",
         "//dependencies/maven/artifacts/commons-cli",
-
-        "//dependencies/maven/artifacts/io/grpc:grpc-core",
     ],
     classpath_resources = ["//profiler/test/resources:logback-test"],
     data = [
         "//profiler/test/resources:web-content-config"
     ]
 )
+
