--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,14 +78,17 @@ jobs:
       - bazel_install
       - bazel_add_rbe_credential
       # run unit tests
-#      - bazel:
-#          command: bazel test //:test_unit --test_output=streamed
-#      # run integration tests
-#      - run: bazel build @graknlabs_grakn_core//:distribution
-#      - run: unzip bazel-genfiles/external/graknlabs_grakn_core/grakn-core-all.zip -d bazel-genfiles/dist/
-#      - run: nohup bazel-genfiles/dist/grakn-core-all/grakn server start
-# TODO
-#      - run: bazel test //:test_integration --test_output=streamed
+      - bazel:
+          command: bazel test //profiler/generator/test:data-generator-unit-tests --test_output=streamed
+      - bazel:
+          command: bazel test //profiler/test:profiler-bootup-test --test_output=streamed
+      # run integration tests
+      - run: bazel build @graknlabs_grakn_core//:distribution
+      - run: unzip bazel-genfiles/external/graknlabs_grakn_core/grakn-core-all.zip -d bazel-genfiles/dist/
+      - run: nohup bazel-genfiles/dist/grakn-core-all/grakn server start
+
+      - bazel:
+          command: bazel test //profiler/test:profiler-bootup-test-integration --test_output=streamed
 
 workflows:
   version: 2
