--- a/profiler/test/BUILD
+++ b/profiler/test/BUILD
@@ -3,7 +3,7 @@ java_test(
     test_class = "grakn.benchmark.profiler.ProfilerBootupTestIntegration",
     srcs = ["ProfilerBootupTestIntegration.java"],
     deps = [
-        "//profiler:benchmark-profiler",
+        "//profiler/src:benchmark-profiler",
         "@graknlabs_client_java//:client-java",
         "@graknlabs_grakn_core//concept:concept",
         "@graknlabs_graql//java:graql",
@@ -20,7 +20,7 @@ java_test(
     test_class = "grakn.benchmark.profiler.ProfilerBootupTest",
     srcs = ["ProfilerBootupTest.java"],
     deps = [
-        "//profiler:benchmark-profiler",
+        "//profiler/src:benchmark-profiler",
         "//dependencies/maven/artifacts/commons-cli",
     ],
     classpath_resources = ["//profiler/test/resources:logback-test"],
