--- a/profiler/src/generator/test/query/BUILD
+++ b/profiler/src/generator/test/query/BUILD
@@ -5,7 +5,7 @@ java_test(
     deps = [
         "@graknlabs_graql//java:graql",
         "@graknlabs_grakn_core//concept:concept",
-        "//profiler/generator:data-generator",
+        "//profiler/src/generator:data-generator",
         "//dependencies/maven/artifacts/org/mockito:mockito-core",
     ]
 )
@@ -17,7 +17,7 @@ java_test(
     deps = [
         "@graknlabs_graql//java:graql",
         "@graknlabs_grakn_core//concept:concept",
-        "//profiler/generator:data-generator",
+        "//profiler/src/generator:data-generator",
         "//dependencies/maven/artifacts/org/mockito:mockito-core",
     ]
 )
@@ -29,7 +29,7 @@ java_test(
     deps = [
         "@graknlabs_graql//java:graql",
         "@graknlabs_grakn_core//concept:concept",
-        "//profiler/generator:data-generator",
+        "//profiler/src/generator:data-generator",
         "//dependencies/maven/artifacts/org/mockito:mockito-core",
     ]
 )
